# Anime_Desktop

./: Cargo.toml
src/: anime.rs  anime_episode.rs  anime_episode_json.rs  anime_json.rs  main.rs  user.rs
src/api_caller/: animepahe_api_caller.rs  ddos_guard_api_caller.rs  kwik_api_caller.rs  mod.rs
src/api_jsons/: anime_episode_json.rs  anime_json.rs  mod.rs
src/models/: anime.rs  anime_episode.rs  ffmpeg_instance.rs  mod.rs
