[package]
name = "anime_pahe_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["cookies"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
text_io = "0.1.12"
scraper = "0.20.0"
urlencoding = "2.1.3"
rayon = "1.10.0"
radix_fmt = "1.0.0"
regex = "1.11.1"